--- a/css/styles.css
+++ b/css/styles.css
@@ -17,12 +17,12 @@ body{
   text-align: center;
   background-color: #242424;
   color: #4DA5A9;
-  margin-top: 25px;
-  padding-top: 25px;
+  margin-top: 2%;
+  padding-top: 2%;
 }
 
 #pricing{
-  padding: 50px 100px 15px 100px;
+  padding: 5% 10% 5% 10%;
 }
 #testimonials{
 
@@ -85,8 +85,9 @@ body{
  /* title resmi *//* title resmi *//* title resmi *//* title resmi *//* title resmi *//* title resmi */
 
  .title-resmi{
-   width: 60%;
-   margin-left: 175px;
+   width: 45%;
+   /* margin-left: 175px; */
+   margin-left: 11.5rem;
  }
 
  /* ikon *//* ikon *//* ikon *//* ikon *//* ikon *//* ikon *//* ikon *//* ikon *//* ikon */
@@ -111,13 +112,13 @@ body{
 .kaydırmalı-fotoğraf{
 width: 10%;
 border-radius: 100%;
-margin: 10px;
-height: 5%
+/* margin: 10px; */
+margin: 1%;
 }
 
 .press-logo{
   width: 15%;
-  margin: 20px 20px 50px;
+  margin: 2% 2% 5%;
 }
 
 /* yazılar *//* yazılar *//* yazılar *//* yazılar *//* yazılar *//* yazılar *//* yazılar */
@@ -160,6 +161,6 @@ h3{
 }
 
 .sigorta{
-  margin-bottom: 50px;
+  margin-bottom: 5%;
   text-align: center;
 }
